Fixed: Removed dropdown arrow image from button to fix it covering text.
In a few cases the drop down arrow would cover the button text, We have
removed the image to prevent this visual bug.

--- a/css/custom.css
+++ b/css/custom.css
@@ -4,11 +4,6 @@
 #clearDataFromHeading {
     padding: 3px;
 }
-#clearDataFrom {
-    background-image: url(../images/arrow.png), linear-gradient(to bottom, #fff, #eee);
-    background-position: center right;
-    background-repeat: no-repeat;
-}
 #disclaimer {
     font-size: 16px;
 }
